<resources>
    <string name="app_name">Aqarat</string>

    <string name="create_account">إنشاء حساب</string>
    <string name="name">الإسم بالكامل</string>
    <string name="welcome_text_2">جاهز لتكون جزء من مجتمع عقاري \nاملأ البيانات بالاسفل ودع رحلتك تبدأ.</string>
    <string name="or_login_by">او تسجيل الدخول عن طريق :</string>
    <string name="accept_conditions">أوافق على الشروط والأحكام</string>
    <string name="email">البريد الالكتروني</string>
    <string name="phone">رقم الهاتف</string>
    <string name="password">كلمة السر</string>
    <string name="confirm_password">تأكيد كلمة السر</string>
    <string name="welcome_message">مرحبا ! أهلا بعودتك</string>
    <string name="miss_you_message">نحن متشوقون لعودتك مرة اخري. قم بالتسجيل الان للدخول الي ايميلك الخاص</string>
    <string name="remember_me">تذكرني</string>
    <string name="forget_password">نسيت كلمة السر؟</string>
    <string name="login">تسجيل الدخول</string>
    <string name="not_have_account">ليس لديك حساب حتي الان ؟</string>

    <string name="create_new_password">إنشاء كلمة مرور جديدة</string>
    <string name="type_new_password">اكتب كلمة المرور الجديدة القوية الخاصة بك</string>
    <string name="confirm">تأكيد</string>
    <string name="new_password">إعادة تعيين كلمة السر</string>
    <string name="type_phone_num_to_new_pass">اكتب رقم الهاتف الذي سجلت به لتستلم رمز\n اعادة تعيين كلمة السر</string>
    <string name="confirm_phone">تأكيد رقم الهاتف</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_number">التحقق من رقم الهاتف</string>
    <string name="sent_code_to">تم ارسال رمز إلي</string>
    <string name="required">مطلوب</string>
    <string name="passwords_not_the_same">تأكيد كلمة المرور ليست هي نفسها كلمة المرور</string>
    <string name="signUp_successfully">قمت بالتسجيل بنجاح!</string>
</resources>