<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:paddingTop="23dp"
            android:paddingBottom="@dimen/_100sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginBottom="18dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:src="@drawable/logo" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cairo"
                    android:gravity="center"
                    android:text="@string/welcome_message"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="85dp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:fontFamily="@font/cairo"
                    android:gravity="center"
                    android:text="@string/miss_you_message"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_10ssp" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableEnd="@drawable/email_icon"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_8sdp"
                    android:textColorHint="@color/app_color"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/edittext_background"
                    android:drawableEnd="@drawable/password_icon"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_8sdp"
                    android:textColorHint="@color/app_color"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="21dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/forgetPasswordTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:fontFamily="@font/cairo"
                        android:gravity="end"
                        android:text="@string/forget_password"
                        android:textColor="@color/app_color"
                        android:textSize="@dimen/_12ssp" />

                    <CheckBox
                        android:id="@+id/rememberMeCheckBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginHorizontal="16dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/cairo_semibold"
                        android:gravity="end|center_vertical"
                        android:padding="10dp"
                        android:text="@string/remember_me" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loginLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="87dp"
                    android:layout_marginBottom="27dp"
                    android:background="@drawable/button_background"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:elevation="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/_7sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16ssp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="125dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/cairo"
                    android:text="@string/or_login_by"
                    android:textColor="@color/second_color"
                    android:textSize="@dimen/_10ssp" />


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_7sdp"
                    android:src="@drawable/devicon_google" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/createAccountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_4sdp"
                        android:fontFamily="@font/cairo"
                        android:gravity="end"
                        android:text="@string/create_account"
                        android:textColor="@color/blue_color"
                        android:textSize="@dimen/_13ssp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo"
                        android:gravity="end"
                        android:text="@string/not_have_account"
                        android:textColor="@color/second_color"
                        android:textSize="@dimen/_12ssp" />


                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>