<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    tools:context=".ui.auth.newPassword.NewPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_7sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_32sdp"
            android:gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/cairo"
            android:gravity="center"
            android:text="@string/create_new_password"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/cairo"
            android:gravity="center"
            android:text="@string/type_new_password"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_12ssp" />


        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="@dimen/_32sdp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/password_icon"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"
            android:textColorHint="@color/app_color"
            android:textSize="@dimen/_12ssp" />


        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/password_icon"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"
            android:textColorHint="@color/app_color"
            android:textSize="@dimen/_12ssp" />


        <LinearLayout
            android:id="@+id/confirmButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="87dp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginBottom="27dp"
            android:background="@drawable/button_background"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:elevation="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_6sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>