<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    tools:context=".ui.auth.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:paddingTop="23dp"
            android:paddingBottom="@dimen/_100sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="18dp"
                    android:layout_marginBottom="18dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="86dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/back_arrow" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/logo"
                        android:gravity="center" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cairo"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="85dp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:fontFamily="@font/cairo"
                    android:gravity="center"
                    android:text="@string/welcome_text_2"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_10ssp" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints="name"
                    android:background="@drawable/edittext_background"
                    android:drawableEnd="@drawable/name_icon"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_8sdp"
                    android:textColorHint="@color/app_color"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableEnd="@drawable/email_icon"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_8sdp"
                    android:textColorHint="@color/app_color"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableEnd="@drawable/phone_icon"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:padding="@dimen/_8sdp"
                    android:textColorHint="@color/app_color"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableEnd="@drawable/password_icon"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_8sdp"
                    android:textColorHint="@color/app_color"
                    android:textSize="@dimen/_12ssp" />

                <EditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edittext_background"
                    android:drawableEnd="@drawable/password_icon"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_8sdp"
                    android:textColorHint="@color/app_color"
                    android:textSize="@dimen/_12ssp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="21dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:gravity="end"
                    android:orientation="horizontal">


                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:fontFamily="@font/cairo_semibold"
                        android:padding="10dp"
                        android:text="@string/accept_conditions" />

                </LinearLayout>

                <include
                    android:id="@+id/loadingProgressBar"
                    layout="@layout/loading_progress_bar" />

                <LinearLayout
                    android:id="@+id/signUpButtonLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginHorizontal="87dp"
                    android:layout_marginBottom="27dp"
                    android:background="@drawable/button_background"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:elevation="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/_7sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo"
                        android:text="@string/create_account"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16ssp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="125dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/cairo"
                    android:text="@string/or_login_by"
                    android:textColor="@color/second_color"
                    android:textSize="@dimen/_10ssp" />


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_7sdp"
                    android:src="@drawable/devicon_google" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>