<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    tools:context=".ui.auth.verifyPhoneNum.VerifyPhoneNumberFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_7sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_32sdp"
            android:gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/cairo"
            android:gravity="center"
            android:text="@string/verify_number"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/sentNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/cairo"
            android:gravity="center"
            android:text="@string/sent_code_to"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <EditText
                android:id="@+id/etDigit1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/digit_edit_text_background"
                android:gravity="center"
                android:importantForAccessibility="yes"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etDigit2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/digit_edit_text_background"
                android:gravity="center"
                android:importantForAccessibility="yes"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etDigit3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/digit_edit_text_background"
                android:gravity="center"
                android:importantForAccessibility="yes"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etDigit4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/digit_edit_text_background"
                android:gravity="center"
                android:importantForAccessibility="yes"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/confirmButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="87dp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginBottom="27dp"
            android:background="@drawable/button_background"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:elevation="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_6sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>